tests/paczka1/small_fuzzy/84257751.err
Error in line 1: S579 S189 12,3
Error in line 13: z07iv S579 191,6
Error in line 14: z07iv S473 38,2
